--- a/report/refs.bib
+++ b/report/refs.bib
@@ -22,6 +22,14 @@
   year={2012}
 }
 
+@inproceedings{keegan,
+  author={Desmond Keegan},
+  title={The Incorporation of Mobile Learning into mainstream education and training},
+  booktitle={4th World conference on mLearning},
+  address={Cape Town, South Africa},
+  year={2005}
+}
+
 @misc{phonegap,
   title={PhoneGap Build},
   howpublished={\url{https://build.phonegap.com/}},
@@ -40,6 +48,16 @@
 @misc{github,
   title={Github},
   howpublished={\url{https://github.com/about}},
+}
+
+@misc{hc,
+  title={Infographic: Generation Mobile},
+  howpublished={\url{http://www.hackcollege.com/blog/2011/10/31/generation-mobile.html}},
+}
+
+@misc{pie,
+  title={From Pie in the Sky to the Palm of Your Hand: The Proliferation of Devices Spurs More Mobile Learning},
+  howpublished={\url{http://www.astd.org/Publications/Magazines/TD/TD-Archive/2012/03/The-Proliferation-of-Devices-Spurs-More-Mobile-Learning}},
 }
 
 @misc{vid,
