--- a/article/article.tex
+++ b/article/article.tex
@@ -59,15 +59,46 @@
 
 Some people are really good at solving problems with pen and paper. There is
 just something special about solving a problem with just your mind, a pen and
-some paper. When you're done there is a feeling of value associated with your
-pages of notes and derivations. If you write it clearly with comments well all
-the better because now you can share it with others and there is a good chance
-they will be able to follow. As you know though this all falls apart when you
-want to do some data processing on a computer.
+some paper. 
+
+When you're done there is a feeling of value associated with your pages of
+notes and derivations. If you write it clearly with comments well all the
+better, because now you can share it with others and there is a good chance
+they will be able to follow along. This is all well and good until you want to
+do some number crunching. For some (most) problems a computer based solution
+is orders of magnitude more effective.
 
 For some once we enter the computational realm things get complex and unclear.
+There are command lines, compilers, libraries, dependencies, formats and many
+other scary things. Try asking someone working with scientific computations
+how they solved their problem. More often than not you will get a very
+technical answer to a physical problem. What is worse, try asking them to
+\emph{show} you how they solved the problem. They tend to give you some
+confusing source code and maybe some graphs. Even solving simple problems can be uninformative.
 
+Next is the often \emph{steep} learning curve associated with computational
+tools. There are some amazing tools out there but sometimes you just don't
+feel like learning another gigantic peice of software from scratch when all
+you wan't is some simple computations. Wouldn't it be nice to work using a
+medium that is clear, elegant and powerful. An enviroment where your
+computational solution is contained and presentable "as is" just like a pen
+and paper solution.
 
+Recently there has been a push to create systems where computer based
+solutions can be written, executed and presented in a format that looks and
+\emph{feels} like the traditional pen and paper approach to problem solving.
+You may be familiar with some systems for creating "interactive digital
+notebooks" or "computable documents". Mathematica provide a very popular
+solution which exposes the mathematica language in a visually pleasing format.
+
+\begin{quote}
+\textit{ Mathematica notebooks are structured interactive documents that can
+contain text, graphics, sound, calculations, typeset expressions, and user
+interface elements.}
+\end{quote}
+
+More recently a solution has been developed for the python programming
+language. The technology is called IPython notebooks.
 
 
 \end{multicols}
