--- a/article/article.tex
+++ b/article/article.tex
@@ -48,7 +48,7 @@
     \\[4mm]
     \textbf{\textsc{\Huge Digital Notebooks for Computation}}
     \\[6mm]
-    \textit{\Large A classy interface for scientific computing}
+    \textit{\Large IPython Notebooks: A classy interface for scientific computing}
     \\[6mm]
     \textsc{\large By Michael McClintock}
     \\[4mm]
@@ -170,6 +170,38 @@ popular websites such as StackOverflow, Reddit and Github. Equations can be
 entered in TeX notation which will most likey be familiar to scientists
 everywhere. Even the final result is standard-based. Its just HTML in a browser. 
 
+With all these well established open technologies IPython notebooks have all
+the right ingredients to appeal to scientists, IT professionals and students.
+In fact educators and lectures have been quick to see the value of IPython
+notebooks as learning tools. Dr. C. Titus Brown is a assistant professor at
+michigan state university who has been using IPython notebooks for teaching
+classes. Dr. Brown recently wrote about his experience of using IPython in a
+classroom environment.
+
+\begin{quote} 
+\textit{The IPython Notebook (or 'ipynb' for short) is one of the most
+exciting technologies for teaching and research that I've seen in recent
+years. It is a completely open source, well architected, and fairly stable
+system for scientific computing and data exploration.}
+\end{quote}
+
+\begin{quote}
+\textit{\textbf{The bottom line is that the IPython Notebook is (still) the
+best thing I've ever used for teaching.}}
+\end{quote}
+
+It's not just rookie students who find IPython notebook apealling. As written on his website Randy Olsen is a PhD student at Michigan State University. Here are his thoughts on the software
+
+\begin{quote}
+\textit{I do the majority of my post-experiment data analysis in Python
+nowadays, since it’s one of the few sanely-designed scripting languages out
+there with all the functionality I need. What I’ve been missing is a seamless
+user interface where I can both take notes about my research and perform my
+data analysis in the same location. IPython Notebook finally provides that.}
+\end{quote}
+
+
+
 
 
 
@@ -185,5 +217,9 @@ Brian Granger
 The IPython notebook: a historical retrospective
 http://blog.fperez.org/2012/01/ipython-notebook-historical.html
 Fernando Perez
+
+Teaching with ipython notebooks -- a progress report
+http://ivory.idyll.org/blog/teaching-with-ipynb-2.html
+C. Titus Brown
 
 \end{document}
