--- a/article/article.tex
+++ b/article/article.tex
@@ -48,7 +48,8 @@
     \\[4mm]
     \textbf{\textsc{\Huge Digital Notebooks for Computation}}
     \\[6mm]
-    \textit{\Large IPython Notebooks: A classy interface for scientific computing}
+    \textit{\Large IPython Notebooks: A classy interface for scientific
+    computing}
     \\[6mm]
     \textsc{\large By Michael McClintock}
     \\[4mm]
@@ -90,6 +91,7 @@ solutions can be written, executed and presented in a format which looks and
 \emph{feels} like the traditional pen and paper approach. Brian Granger, a
 Physics Proffesor at California Polytechnic State University and lead
 developer of IPython Notebooks, associates data processing with storytelling.
+\cite{granger}
 
 \begin{quote} 
 \textit {Data is useless on its own, you need to leverage the data to tell a
@@ -146,8 +148,8 @@ easily shared.
 If any of this sounds interesting visit \url{http://nbviewer.ipython.org/} to
 see some notebooks in action. 
 
-Its perhaps no suprise that the technology has
-become increasingly popular. Fernando Perez the creator of IPython recently wrote
+Its perhaps no suprise that the technology has become increasingly popular.
+Fernando Perez the creator of IPython recently wrote. \cite{perez}
 
 \begin{quote}
 \textit{Since the notebook was introduced with IPython 0.12, it has proved to
@@ -168,7 +170,8 @@ web applications for storing and transfering data. Text can be entered in
 Markdown which is also hugely popular being the text format of choice for
 popular websites such as StackOverflow, Reddit and Github. Equations can be
 entered in TeX notation which will most likey be familiar to scientists
-everywhere. Even the final result is standard-based. Its just HTML in a browser. 
+everywhere. Even the final result is standard-based. Its just HTML in a
+browser.
 
 With all these well established open technologies IPython notebooks have all
 the right ingredients to appeal to scientists, IT professionals and students.
@@ -176,7 +179,7 @@ In fact educators and lectures have been quick to see the value of IPython
 notebooks as learning tools. Dr. C. Titus Brown is a assistant professor at
 michigan state university who has been using IPython notebooks for teaching
 classes. Dr. Brown recently wrote about his experience of using IPython in a
-classroom environment.
+classroom environment. \cite{brown}
 
 \begin{quote} 
 \textit{The IPython Notebook (or 'ipynb' for short) is one of the most
@@ -190,7 +193,9 @@ system for scientific computing and data exploration.}
 best thing I've ever used for teaching.}}
 \end{quote}
 
-It's not just rookie students who find IPython notebook apealling. As written on his website Randy Olsen is a PhD student at Michigan State University. Here are his thoughts on the software
+It's not just rookie students who find IPython notebook apealling. As written
+on his website Randy Olsen is a PhD student at Michigan State University. Here
+are his thoughts on the software. \cite{olson}
 
 \begin{quote}
 \textit{I do the majority of my post-experiment data analysis in Python
@@ -208,18 +213,13 @@ data analysis in the same location. IPython Notebook finally provides that.}
 
 
 
+
+
+
+
 \end{multicols}
 
-The IPython Notebook for Data Science 
-http://www.youtube.com/watch?v=nRHBdkxVn48 
-Brian Granger
-
-The IPython notebook: a historical retrospective
-http://blog.fperez.org/2012/01/ipython-notebook-historical.html
-Fernando Perez
-
-Teaching with ipython notebooks -- a progress report
-http://ivory.idyll.org/blog/teaching-with-ipynb-2.html
-C. Titus Brown
+\bibliographystyle{ieeetr}
+\bibliography{refs}
 
 \end{document}
