--- a/article/article.tex
+++ b/article/article.tex
@@ -83,7 +83,7 @@ tools. There are some amazing tools out there but sometimes you just don't
 feel like learning another gigantic peice of software from scratch when all
 you wan't are some simple computations. Wouldn't it be nice to work using a
 medium that is clear, elegant and powerful. An enviroment where your
-computational solution is contained and presentable "as is" just like a pen
+computational solution is contained and presentable ``as is'' just like a pen
 and paper solution.
 
 Recently there has been a push to create systems where computer based
@@ -98,8 +98,8 @@ developer of IPython Notebooks, associates data processing with storytelling.
 story.}
 \end{quote}
 
-You may be familiar with some systems for creating "interactive digital
-notebooks" or "computable documents". Mathematica provide a very popular
+You may be familiar with some systems for creating ``interactive digital
+notebooks'' or ``computable documents''. Mathematica provide a very popular
 solution which exposes the mathematica language in a visually pleasing format.
 
 \begin{quote}
@@ -145,10 +145,27 @@ up a browser.
 easily shared.
 \end{itemize}
 
-If any of this sounds interesting visit \url{http://nbviewer.ipython.org/} to
-see some notebooks in action. 
+There are some very nice benifits of uncoupling the user interface (browser)
+used to view notebooks from the computational resource (computer running
+IPython). It becomes possible, even easy to run your notebooks on high
+performance computers or clusters over the web. This opens the door for data
+intensive, scalable notebooks that would be inconvenient to run on your laptop
+computer. 
 
-Its perhaps no suprise that the technology has become increasingly popular.
+These days with services like Amazon EC2 and Windows Azure it is possible to
+rent a large number of computing resources. So it is possible to run data
+intensive IPython Notebooks ``in the Cloud'' for processing gains. For instance
+this is from NotebookCloud documentation.
+
+\begin{quote}
+\textit{NotebookCloud is service that allows you to launch and control IPython
+Notebook servers on Amazon EC2 from your browser. This enables you to host
+your own Python programming environment, on your own Amazon virtual machine,
+and access it from any modern web browser. You can set everything up in a
+minute or two, and it's very easy to use.}
+\end{quote}
+
+So its perhaps no suprise that the technology has become increasingly popular.
 Fernando Perez the creator of IPython recently wrote. \cite{perez}
 
 \begin{quote}
@@ -182,7 +199,7 @@ classes. Dr. Brown recently wrote about his experience of using IPython in a
 classroom environment. \cite{brown}
 
 \begin{quote} 
-\textit{The IPython Notebook (or 'ipynb' for short) is one of the most
+\textit{The IPython Notebook (or ``ipynb'' for short) is one of the most
 exciting technologies for teaching and research that I've seen in recent
 years. It is a completely open source, well architected, and fairly stable
 system for scientific computing and data exploration.}
@@ -193,9 +210,9 @@ system for scientific computing and data exploration.}
 best thing I've ever used for teaching.}}
 \end{quote}
 
-It's not just rookie students who find IPython notebook apealling. As written
-on his website Randy Olsen is a PhD student at Michigan State University. Here
-are his thoughts on the software. \cite{olson}
+It's not just educators and rookie students who find IPython notebook
+apealling. As written on his website Randy Olsen is a PhD student at Michigan
+State University. Here are his thoughts on the software. \cite{olson}
 
 \begin{quote}
 \textit{I do the majority of my post-experiment data analysis in Python
@@ -205,17 +222,32 @@ user interface where I can both take notes about my research and perform my
 data analysis in the same location. IPython Notebook finally provides that.}
 \end{quote}
 
+When you share and collaborate on a project in a structured enviroment the
+results can be nothing short of amazing. With the growing number of internet
+tools and social media outlets it is becoming possible and even essential to
+collaborate online. One of the biggest success stroies for this approach is
+Github.com. Github is a website where mainly programmers and software engineers
+work on opensource projects using the popular version control system Git. The
+quality, scale and popularity of the Github ecosystem is amazing.
 
+Github like systems have been widely accepted in the IT community which have
+benifitted greatly as a result. However there is nothing specific about these
+``Social Coding'' environments that make them unsuitable for scientists and
+students. Combining online ecosystems like GitHub with scientific computing
+tools like IPython Notebooks may provide a \emph{potent} mix where students,
+educators and scientists can collaborate. 
 
+The future looks promosing for online learning and collaboration in science.
+It is already possible to find examples where students are writing assignments
+as IPython Notebooks and managing them on github. When the due date arrives
+the lecturer can mark the notebooks online directly from Github. \cite{brown2}
 
-
-
-
-
-
-
-
-
+Only time will tell if the scientific comunity embraces online collaboration
+with tools like IPython Notebook. But is safe to say that this area of
+education is rapidly improving. With the astonishing growth of networked
+devices like smarthpones and tablets along with the ``Cloud Computing''
+revolution it seems systems like IPython Notebook wil only become more popular
+with students and scientists.
 
 \end{multicols}
 
