--- a/article/refs.bib
+++ b/article/refs.bib
@@ -22,3 +22,9 @@
   title={IPython Notebook: Finally, the research notebook I’ve always been looking for is here!},
   howpublished={\url{http://www.randalolson.com/2012/05/10/ipython-notebook/}}
 }
+
+@misc{brown2,
+  author={C. Titus Brown},
+  title={Upload homework to github gists as IPython Notebooks (YouTube)},
+  howpublished={\url{http://www.youtube.com/watch?v=YY0Bff5PoKI}}
+}
